feat(example): example extended with fabric
