# examples/cactus-example-supply-chain-business-logic-plugin/src/main/typescript/business-logic-plugin/web-services/list-shipment-endpoint.ts
@@ -1,0 +1,102 @@
+import { Express, Request, Response } from "express";
+
+import {
+  Logger,
+  Checks,
+  LogLevelDesc,
+  LoggerProvider,
+} from "@hyperledger/cactus-common";
+import {
+  IExpressRequestHandler,
+  IWebServiceEndpoint,
+} from "@hyperledger/cactus-core-api";
+import { registerWebServiceEndpoint } from "@hyperledger/cactus-core";
+
+import {
+  DefaultApi as FabricApi,
+  FabricContractInvocationType,
+  RunTransactionRequest,
+} from "@hyperledger/cactus-plugin-ledger-connector-fabric";
+
+import OAS from "../../../json/openapi.json";
+
+export interface IListShipmentEndpointOptions {
+  logLevel?: LogLevelDesc;
+  fabricApi: FabricApi;
+}
+
+export class ListShipmentEndpoint implements IWebServiceEndpoint {
+  public static readonly CLASS_NAME = "ListShipmentEndpoint";
+  private readonly log: Logger;
+
+  public get className(): string {
+    return ListShipmentEndpoint.CLASS_NAME;
+  }
+
+  public getOasPath() {
+    return OAS.paths[
+      "/api/v1/plugins/@hyperledger/cactus-example-supply-chain-backend/list-shipment"
+    ];
+  }
+
+  getPath(): string {
+    const apiPath = this.getOasPath();
+    return apiPath.get["x-hyperledger-cactus"].http.path;
+  }
+
+  getVerbLowerCase(): string {
+    const apiPath = this.getOasPath();
+    return apiPath.get["x-hyperledger-cactus"].http.verbLowerCase;
+  }
+
+  public getOperationId(): string {
+    return this.getOasPath().get.operationId;
+  }
+
+  constructor(public readonly opts: IListShipmentEndpointOptions) {
+    const fnTag = `${this.className}#constructor()`;
+    Checks.truthy(opts, `${fnTag} arg options`);
+    Checks.truthy(opts.fabricApi, `${fnTag} options.fabricApi`);
+    const level = this.opts.logLevel || "INFO";
+    const label = this.className;
+    this.log = LoggerProvider.getOrCreate({ level, label });
+  }
+
+  public registerExpress(expressApp: Express): IWebServiceEndpoint {
+    registerWebServiceEndpoint(expressApp, this);
+    return this;
+  }
+
+  public getExpressRequestHandler(): IExpressRequestHandler {
+    return this.handleRequest.bind(this);
+  }
+
+  async handleRequest(req: Request, res: Response): Promise<void> {
+    const tag = `${this.getVerbLowerCase().toUpperCase()} ${this.getPath()}`;
+    try {
+      this.log.debug(`${tag}`);
+      const request: RunTransactionRequest = {
+        fabricSigningCredential: {
+          keychainId: "PluginKeychainMemory_C",
+          keychainRef: "user2",
+        },
+        channelName: "mychannel",
+        chainCodeId: "shipment",
+        invocationType: FabricContractInvocationType.CALL,
+        functionName: "getListShipment",
+        functionArgs: [],
+      };
+      const {
+        data: { functionOutput },
+      } = await this.opts.fabricApi.runTransactionV1(request);
+      const output = JSON.parse(functionOutput);
+      const body = { data: output };
+      res.status(200);
+      res.json(body);
+    } catch (ex) {
+      this.log.debug(`${tag} Failed to serve request:`, ex);
+      res.status(500);
+      res.json({ error: ex.stack });
+    }
+  }
+}
